<resources>
    <string name="app_name">Storage</string>
    <!-- Activity Titles -->
    <string name="title_settings_storage">Settings Storage</string>
    <string name="title_internal_storage">Internal Storage</string>
    <string name="title_external_storage">External Storage</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Keys -->
    <string name="settings_key_signature">signature</string>

    <!-- Main activity -->
    <string name="test_switch_1">Test switch 1</string>
    <string name="test_switch_2">Test switch 2</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="go_to_internal_storage_page">Go to internal storage page</string>
    <string name="go_to_external_storage_page">Go to external storage page</string>

    <!-- Common -->
    <string name="save_to_file">Save to file</string>
    <string name="load_from_file">Load from file</string>
</resources>